# wasm2native

./: .gitignore  ATTRIBUTIONS.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  coverity.sh
.github/ISSUE_TEMPLATE/: improvement.md  report_bug.md
build-scripts/: build_llvm.py
core/: config.h  version.h
core/iwasm/common/: iwasm_common.cmake  wasm.h  wasm_loader.c  wasm_loader.h  wasm_memory.c  wasm_opcode.h  wasm_runtime.c  wasm_runtime.h
core/iwasm/compilation/: aot.c  aot.h  aot_compiler.c  aot_compiler.h  aot_emit_compare.c  aot_emit_const.c  aot_emit_const.h  aot_emit_control.c  aot_emit_control.h  aot_emit_conversion.c  aot_emit_exception.c  aot_emit_function.c  aot_emit_function.h  aot_emit_memory.c  aot_emit_memory.h  aot_emit_numberic.c  aot_emit_parametric.c  aot_emit_variable.c  aot_emit_variable.h  aot_llvm.c  aot_llvm.h  aot_llvm_extra.cpp  aot_llvm_extra2.cpp  aot_llvm_extra2.h  iwasm_compl.cmake
core/iwasm/compilation/simd/: simd_access_lanes.c  simd_bit_shifts.c  simd_bitmask_extracts.c  simd_bitwise_ops.c  simd_bool_reductions.c  simd_comparisons.c  simd_construct_values.c  simd_conversions.c  simd_floating_point.c  simd_int_arith.c  simd_load_store.c  simd_load_store.h  simd_sat_int_arith.c
core/iwasm/include/: aot_comp_option.h  aot_export.h  w2n_export.h  wasm_export.h
core/iwasm/libraries/libc-builtin/: libc64_builtin_wrapper.c  libc_builtin.cmake  libc_builtin_wrapper.c
core/iwasm/libraries/libc-nosandbox/: libc64_nosandbox_wrapper.c  libc_nosandbox.cmake
core/shared/mem-alloc/: mem_alloc.c  mem_alloc.cmake  mem_alloc.h
core/shared/mem-alloc/ems/: ems_alloc.c  ems_gc.h  ems_gc_internal.h  ems_hmu.c  ems_kfc.c
core/shared/platform/android/: platform_init.c  platform_internal.h  shared_platform.cmake
core/shared/platform/common/posix/: platform_api_posix.cmake  posix_thread.c  posix_time.c
core/shared/platform/darwin/: platform_internal.h  shared_platform.cmake
core/shared/platform/include/: platform_api_extension.h  platform_api_vmcore.h  platform_common.h
core/shared/platform/linux/: platform_init.c  platform_internal.h  shared_platform.cmake
core/shared/platform/windows/: platform_internal.h  shared_platform.cmake  win_thread.c
core/shared/utils/: bh_common.c  bh_log.c  bh_platform.h  shared_utils.cmake
core/shared/utils/uncommon/: bh_read_file.c
doc/: build_wasm_app.md  compile_wasm_app_to_native.md  embed_compiled_native.md  register_native_api.md
samples/compiled-embed-native/: build.sh
samples/compiled-native/: build.sh  run.sh
samples/embed-compiled-native/: run.sh
samples/embed-compiled-native/src/: nosandbox_main.c
samples/embed-compiled-native/wasm-app/: main.c  nomain.c
samples/hello-world/: build.sh  main.c  run.sh
tests/benchmarks/: README.md
tests/benchmarks/benchmarks-game/: benchmarks_game.patch  build.sh  run.sh
tests/benchmarks/coremark/: build.sh  run.sh
tests/benchmarks/dhrystone/: build.sh  run.sh
tests/benchmarks/jetstream/: build.sh  run.sh
tests/benchmarks/micro-suite/: build.sh  run.sh
tests/benchmarks/polybench/: build.sh  run.sh
tests/benchmarks/sightglass/: build.sh  run.sh
tests/benchmarks/spec-cpu-benchmark/: build.sh  run.sh
tests/benchmarks/wasm-files/: pollard.wasm  snappy.wasm
tests/fuzz/wasm-mutator-test/: CMakeLists.txt  README.md  wasm_mutator_fuzz.cc
tests/malformed/: README.md  malformed_test.py
tests/standalone/stream/: build.sh
tests/standalone/test-aes/: aes.c  aes.h  build.sh  main.c
tests/standalone/test-printf/: build.sh  main.c  run.sh
tests/w2n-test-suites/: README.md  test_w2n.sh
tests/w2n-test-suites/spec-test-script/: all.py  ignore_cases.patch  runtest.py
wasm2native-compiler/: CMakeLists.txt  README.md  main.c
wasm2native-vmlib/: CMakeLists.txt  README.md  config_common.cmake  runtime_lib.cmake
wasm2native-vmlib/application/: main.c  wasm_application.c
